<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.codesimcoe</groupId>
    <artifactId>mandelbrot-fx</artifactId>
    <version>1.0.0</version>

    <properties>
        <maven.compiler.source>27</maven.compiler.source>
        <maven.compiler.target>27</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javafx.version>27-ea+20</javafx.version>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-media</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>io.github.mkpaz</groupId>
            <artifactId>atlantafx-base</artifactId>
            <version>2.1.0</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.15.0</version>
                <configuration>
                    <release>27</release>
                    <compilerArgs>
                        <arg>--enable-preview</arg>
                        <arg>--add-modules=jdk.incubator.vector</arg>
                        <arg>--add-exports=java.base/jdk.internal.vm.annotation=com.codesimcoe.mandelbrotfx</arg>
                        <arg>--add-exports=java.base/jdk.internal.value=com.codesimcoe.mandelbrotfx</arg>
                        <arg>--add-exports=java.base/jdk.internal.misc=com.codesimcoe.mandelbrotfx</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>com.codesimcoe.mandelbrotfx.MandelbrotApp</mainClass>
                    <options>
                        <option>--enable-preview</option>
                        <option>--add-modules=jdk.incubator.vector</option>
                        <option>--enable-native-access=javafx.graphics</option>
                        <option>--enable-native-access=javafx.media</option>
                    </options>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>